Add group-based bin packing for replica allocation